[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "prompt-doctor"
version = "0.1.0"
authors = [
  { name = "Your Name", email = "your.email@example.com" },
]
description = "A tool for debugging and refining LLM prompts in real-time"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "flask",
    "jinja2",
    "openai",
]

[project.urls]
"Homepage" = "https://github.com/yourusername/prompt-doctor"
"Bug Tracker" = "https://github.com/yourusername/prompt-doctor/issues"

[tool.hatch.build.targets.wheel]
packages = ["prompt_doctor"]
